force-app/main/default/objects/HDT_Informative_Configuration__mdt/HDT_Informative_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>HDT_Informative_Configuration</label>
    <pluralLabel>HDT_Informative_Configurations</pluralLabel>
</CustomObject>