force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>