force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/BillingProfile__c.field-meta.xml
<CustomField>
    <fullName>BillingProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BillingProfile</label>
    <type>Checkbox</type>
</CustomField>