force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/EC1Level__c.field-meta.xml
<CustomField>
    <fullName>EC1Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EC1Level</label>
    <type>Checkbox</type>
</CustomField>