force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/GlobalAction__c.field-meta.xml
<CustomField>
    <fullName>GlobalAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GlobalAction</label>
    <type>Checkbox</type>
</CustomField>