force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/InformationDetail__c.field-meta.xml
<CustomField>
    <fullName>InformationDetail__c</fullName>
    <label>InformationDetail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>