force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/MacroTopic__c.field-meta.xml
<CustomField>
    <fullName>MacroTopic__c</fullName>
    <label>MacroTopic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>