force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/notBilledList__c.field-meta.xml
<CustomField>
    <fullName>notBilledList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>notBilledList</label>
    <type>Checkbox</type>
</CustomField>