force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/NoteVarIva__c.field-meta.xml
<CustomField>
    <fullName>NoteVarIva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoteVarIva</label>
    <type>Checkbox</type>
</CustomField>