force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/PaymentsList__c.field-meta.xml
<CustomField>
    <fullName>PaymentsList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaymentsList</label>
    <type>Checkbox</type>
</CustomField>