force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/ProcessObject__c.field-meta.xml
<CustomField>
    <fullName>ProcessObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProcessObject</label>
    <type>Checkbox</type>
</CustomField>