force-app/main/default/objects/HDT_Informative_Configuration__mdt/fields/ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>ServicePoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ServicePoint</label>
    <type>Checkbox</type>
</CustomField>