force-app/main/default/objects/HDT_Informative_Configuration__mdt/listViews/Information_Manager.listView-meta.xml
<ListView>
    <fullName>Information_Manager</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Cluster__c</columns>
    <columns>MacroTopic__c</columns>
    <columns>InformationDetail__c</columns>
    <columns>Commodity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Information Manager</label>
    <language>en_US</language>
</ListView>